@@ -208,6 +208,7 @@ tmac_TESTS = \
   tmac/tests/doc_indents-correctly.sh \
   tmac/tests/doc_output-footer-when-continuously-rendering.sh \
   tmac/tests/doc_smoke-test.sh \
+  tmac/tests/doc_synopsis_is_not_adjusted.sh \
   tmac/tests/e_chapter-titles-work.sh \
   tmac/tests/e_columns-work-on-long-pages.sh \
   tmac/tests/e_delayed-text-marks-work.sh \
